--- a/index.html
+++ b/index.html
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style.css" />
     <title>Pagina Master</title>
-</head>
-<body>
-
-    <div class="container">
+  </head>
+  <body>
+   
+    <div class="wrapper">
         <header class="cabecalho">
-            <img src="images/logo.svg" alt=" logtipo" class="logo">
-
+            <img src="images/logo.svg" alt=" logtipo" class="logo" />
             <nav class="navegation">
                 <ul class="nav-list">
-                    <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Lar</a></li>
-                        <li><a href="">Contato</a></li>
-                        <li><a href="">Blog</a></li>
-                        <li><a href="">Carreiras</a></li>
-                    </ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Lar</a></li>
+                    <li><a href="">Contato</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Carreiras</a></li>
                 </ul>
-
             </nav>
             <button class="btn">Solicitar convite</button>
-
         </header>
-
-
-
-
-
     </div>
 
-
-
-
+    <div class="wrapper-gray">
+        <main>
+            <section class="content">
+                <article class="left">
+                    <h1>Banco digital de próxima geração</h1>
+                    <p>
+                        Leve sua vida financeira online. A sua conta Easybank será um balcão
+                        único para gastar, economizar, fazer orçamentos, investir e muito
+                        mais.
+                    </p>
+                    <a href="#" class="link">Solicitar convite</a>
+                </article>
+                <article class="right">
+                    <img src="images/image-mockups.png" alt="imagem celulares" />
+                </article>
+            </section>
+        </main>
+    </div>
+    
 
     <!-- 
 
@@ -123,8 +129,5 @@
 
 
      -->
-
-
-
-</body>
+  </body>
 </html>
