--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <footer>
                 <div class="left-footer">
                     <div class="sociais">
-                        <img src="images/logo.svg" alt="logo">
+                        <img src="images/logo.svg" alt="logo" style="filter: invert(30%);">
                         <div class="sociais-icons">
                             <a href="#"><img src="images/icon-facebook.svg" alt="facebook" ></a>
                             <a href="#"><img src="images/icon-youtube.svg" alt="youtube" ></a>
@@ -185,7 +185,7 @@
                 </ul>
                 
                 <div class="right-footer">
-                    <button class="btn"><a href="#"></a></button>
+                    <button class="btn"><a href="#">Solicitar Convite</a></button>
                     <h6>&copy Easybank. Todos os direitos reservados</h6>
                 </div>
 
