--- a/index.html
+++ b/index.html
@@ -186,49 +186,14 @@
                 
                 <div class="right-footer">
                     <button class="btn"><a href="#">Solicitar Convite</a></button>
-                    <h6>&copy Easybank. Todos os direitos reservados</h6>
+                    <h6>&copy Easybank. Todos os direitos reservados. <br>
+                        <a href="https://github.com/LucianoSBFrontEnd"> Feito por: <strong>Luciano Moura</strong></a></h6>
+                    
                 </div>
 
             </footer>
-
         </div>
-
-
     </div>
-    <!-- 
-  
-
-  Artigos Mais Recentes
-
-  
-  Receba dinheiro em qualquer moeda sem taxas
-  O mundo está ficando menor e estamos nos tornando mais móveis. Então por que você deveria estar 
-  forçado a receber dinheiro apenas em uma única…
-
-  Por Wilson Hutton
-  Mime-se sem se preocupar com dinheiro
-  Nosso recurso de orçamento simples permite separar seus gastos e definir 
-  limites realistas a cada mês. Isso significa que você…
-
-  Por Wilson Hutton
-  
-
-  Por Claire Robinson
-  
-  
-
-  Sobre nós
-  Contato
-  Blogue
-  Carreiras
-  Apoiar
-  política de Privacidade
-
-  Solicitar convite
-
-  ©Easybank. Todos os direitos reservados
-
-
-     -->
+   
   </body>
 </html>
