--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="/stylemobile/mobile.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>Pagina Master</title>
   </head>
   <body>
