--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 
         <header class="cabecalho">
             <img src="images/logo.svg" alt=" logtipo" class="logo" />
-            <nav class="navegation">
-                <ul class="nav-list">
+
+            <nav class="navegation" id="menu-nav">
+                <button id="btn-menu"><a href="#">Menu</a></button>
+                <ul class="nav-list" id="menu-list">
                     <li><a href="">Home</a></li>
                     <li><a href="">Lar</a></li>
                     <li><a href="">Contato</a></li>
@@ -24,7 +26,9 @@
                     <li><a href="">Carreiras</a></li>
                 </ul>
             </nav>
-            <button class="btn"><a href="#">Solicitar convite</a></button>
+            <button class="btn btn2-header" ><a href="#">Solicitar convite</a></button>
+
+
         </header>
         
         <section class="content">
@@ -35,7 +39,7 @@
                     único para gastar, economizar, fazer orçamentos, investir e muito
                     mais.
                 </p>
-                <button class="btn"><a href="#" class="link">Solicitar convite</a></button>
+                <button class="btn" ><a href="#" class="link">Solicitar convite</a></button>
             </article>
 
             <article class="right">
@@ -197,5 +201,7 @@
         </div>
     </div>
    
+
+    <script src="script/script.js"></script>
   </body>
 </html>
